--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       Solid Solutions helps businesses simplify problems, improve systems,
       and get reliable results without unnecessary complexity.
     </p>
+
+    <!-- Your photo goes here -->
+    <img src="office.jpg" alt="Office Image" style="max-width:100%; height:auto; margin-top:20px;">
   </main>
 
   <footer>
