--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
 
   <main>
     <h2>Contact</h2>
-    <p>Email: info@solidsolutions.com</p>
-    <p>We’ll get back to you quickly.</p>
+    <p>Email: daniel44aus@gmail.com</p>
+    <p>papi</p>
   </main>
 
   <footer>
